@@ -59,6 +59,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13183: Fix pdb skipping frames after hitting a breakpoint and running
+  step.  Patch by Xavier de Gaye.
+
 - Issue #14696: Fix parser module to understand 'nonlocal' declarations.
 
 - Issue #10941: Fix imaplib.Internaldate2tuple to produce correct result near
